samples/_failures_safe/1761546801_3a0c24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38704db0.c: In function ‘main’:
./samples/SAFE/__tmp_38704db0.c:164:5: error: expected declaration or statement at end of input
  164 |     graph.edges[4].dest = 4;
      |     ^~~~~
